--- a/src/style.css
+++ b/src/style.css
@@ -78,6 +78,7 @@ form {
   width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .logOut {
@@ -273,4 +274,9 @@ form {
   display: block;
   font-size: 12px;
   text-decoration: underline;
+}
+.profile__img{
+    border-radius: 60px;
+    width: 100px;
+    height: 100px;
 }
