--- a/src/style.css
+++ b/src/style.css
@@ -169,27 +169,37 @@ form {
   background-color: white;
   width: 100%;
   max-width: 320px;
-  padding: 20px;
+  padding: 25px;
   border-radius: 10px;
   position: relative;
   display: flex;
   flex-direction: column;
   color: rgba(0, 0, 0, 0.8);
+  font-size: large;
 }
 
 .nweet h4 {
-  font-size: 14px;
+  font-size: 1px;
 }
 
-.nweet img {
-  right: -10px;
-  top: 20px;
+.nweet__photo {
+  right: -20px;
+  top: 30px;
   position: absolute;
   border-radius: 50%;
   width: 50px;
   height: 50px;
   margin-top: 10px;
 }
+.nweet__img {
+    left: -20px;
+    top: -30px;
+    position: absolute;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
+  }
 
 .nweet__actions {
   position: absolute;
