--- a/src/style.css
+++ b/src/style.css
@@ -89,6 +89,11 @@ form {
   align-items: center;
   width: 100%;
 }
+.factoryCheck__label {
+  color: #04aaff;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
 
 .factoryInput__container {
   display: flex;
@@ -96,7 +101,7 @@ form {
   align-items: center;
   flex-wrap: wrap;
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   width: 100%;
 }
 
